[package]
name = "smashnet-nro"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]
name = "smashnet"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
smashnet = { git = "https://github.com/techyCoder81/smashnet.git", features = ["nro"] }
#curl-sys = { git = "https://github.com/techyCoder81/curl-rust.git", branch = "main" }
skyline-web = { git = "https://github.com/skyline-rs/skyline-web", features = ["json"] }
md5 = "0.7.0"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
